# c-rust

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/rust_basic_ex/: examples.h  main.c
examples/rust_basic_ex/adts/: opt_example.c  result_example.c
examples/rust_basic_ex/impls/: struct_impl_example.c  traits_example.c
examples/rust_basic_ex/smart_pointers/: box_ex.c
examples/rust_basic_ex/structs/: person.c  person.h
examples/rust_basic_ex/traits_def/: mover.h  mover_x_speaker.h  speaker.h
include/rust/: adt.h  box.h  builtin_traits.h  keywords.h  std.h  traits.h
include/rust/data_structures/: vec.h
src/: box.c
